Fix intro alignment

--- a/styles/collection.css
+++ b/styles/collection.css
@@ -1,4 +1,5 @@
 .intro {
+  text-align: center;
   height: 500px;
   display: flex;
   justify-content: space-around;
@@ -20,6 +21,8 @@
 #collection-logo {
   width: 400px;
   height: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .main-card img {
